fix(bug): Fixed spacing issue
Fixed unnecessary spacing when emoji thumb was dragged to the right and left
Emoji thumb and input thumb now layered correctly on top of each other

--- a/src/assets/scss/components/_rangeinput.scss
+++ b/src/assets/scss/components/_rangeinput.scss
@@ -3,13 +3,14 @@
     justify-content: center;
     align-items: center;
     margin: 10px;
+    font-size: 2em;
     &__wrapper {
         display: flex;
         align-items: center;
         justify-content: center;
         background: $white;
         width: 50%;
-        padding: 15px 40px;
+        padding: 40px;
         border-radius: 50px;
     }
     &__label {
@@ -18,16 +19,20 @@
         justify-content: left;
         align-items: center;
         width: 100%;
+        max-width: 600px;
         background: $accent-range;
         height: 6px;
         border-radius: 10px;
-        z-index: 2;
     }
     &__button {
         position: relative;
-        z-index: 1;
-        width: 100%;
-        opacity: 0;    
+        z-index: 2;
+        width: 150%;
+        opacity: 0;
+        margin-left: -15px; 
+        &:hover{
+        cursor: pointer;
+        }
     }
     &__slider {
         position: absolute;
@@ -39,6 +44,7 @@
     &__emoji-thumb {
         position: absolute;
         left: 0;
-        padding-bottom: 7px;
+        margin-left: -23px;
+        z-index: 1;
     }
 }
